--- a/package.json
+++ b/package.json
@@ -6,31 +6,22 @@
     "type": "module",
     "scripts": {
         "start": "gulp",
-        "devBs": "gulp devBs",
-        "build": "gulp build",
+        "build": "gulp bsProd",
         "buildPurge": "gulp buildPurge"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.24.7",
-        "@babel/preset-env": "^7.24.7",
+        "@babel/core": "^7.25.2",
+        "@babel/preset-env": "^7.25.4",
         "@fullhuman/postcss-purgecss": "^5.0.0",
         "@prettier/plugin-pug": "^3.0.0",
-        "@types/browser-sync": "^2.29.0",
-        "@types/gulp": "^4.0.17",
-        "@types/gulp-plumber": "^0.0.37",
-        "@types/gulp-postcss": "^8.0.6",
-        "@types/gulp-rename": "^2.0.6",
-        "@types/gulp-sass": "^5.0.4",
-        "@types/gulp-sourcemaps": "^0.0.38",
-        "@types/webpack-stream": "^3.2.15",
         "babel-loader": "^9.1.3",
         "browser-sync": "^3.0.2",
         "css-loader": "^6.11.0",
         "css-minimizer-webpack-plugin": "^6.0.0",
-        "cssnano": "^7.0.3",
+        "cssnano": "^7.0.5",
         "del": "^7.1.0",
         "eslint": "^8.57.0",
         "gulp": "^5.0.0",
@@ -42,17 +33,17 @@
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^3.0.0",
-        "mini-css-extract-plugin": "^2.9.0",
-        "postcss": "^8.4.39",
+        "mini-css-extract-plugin": "^2.9.1",
+        "postcss": "^8.4.41",
         "postcss-loader": "^8.1.1",
-        "postcss-preset-env": "^9.5.15",
-        "prettier": "^3.3.2",
+        "postcss-preset-env": "^9.6.0",
+        "prettier": "^3.3.3",
         "pug": "^3.0.3",
-        "sass": "^1.77.6",
+        "sass": "1.77.6",
         "sass-loader": "^14.2.1",
         "style-loader": "^3.3.4",
         "terser-webpack-plugin": "^5.3.10",
-        "webpack": "^5.92.1",
+        "webpack": "^5.94.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.2",
         "webpack-stream": "^7.0.0"
